[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.14" 
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Remove the test symlink override - it's causing an unused section warning
# [[tool.mypy.overrides]]
# module = "test.unit.fastcov"
# ignore_errors = true
